--- a/index.html
+++ b/index.html
@@ -16,19 +16,23 @@
         <!-- header -->
         <header>
             <button>
+                <i class="fa-solid fa-users-viewfinder"></i>
                 Speaker View
             </button>
             <button>
-                icona
+                <i class="fa-solid fa-maximize"></i>
             </button>
         </header>
 
         <!-- main -->
         <main>
-            <div class="webcam">
-                <img src="" alt="">
-                <div class="name">Pinco Pallo</div>
-            </div>
+
+            <!-- main webcam -->
+            <section class="webcam">
+                <img src="img/img1.jpg" alt="Webcam di Pinco Pallo">
+                <div class="name"><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</div>
+            </section>
+
         </main>
 
         <!-- footer -->
