--- a/index.html
+++ b/index.html
@@ -41,6 +41,17 @@
             <!-- icon settings -->
             <div class="left-commands">
 
+                <div class="command">
+                    <span class="icon">
+                        <i class="fa-solid fa-microphone"></i>
+                        <br> Mute
+                    </span>
+                    <span class="icon">
+                        <i class="fa-solid fa-angle-up"></i>
+                    </span>
+                </div>
+                
+
             </div>
 
             <div class="center-commands">
