--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
         <footer>
 
             <!-- icon settings -->
-            <section class="commands">
+            <nav>
 
                 <div class="icon">
 
@@ -316,9 +316,9 @@
                         <i class="fa-solid fa-angle-up"></i>
                     </span>
                 </div>
-            </section>
+            </nav>
 
-            <section class="commands">
+            <nav>
                 <div class="icon">
                     <!-- icon -->
                     <span class="icon-element">
@@ -386,7 +386,7 @@
                         <br> More
                     </span>
                 </div>
-            </section>
+            </nav>
 
             <!-- button to exit -->
             <button>
